--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-tour-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.15.0"
+  },
   "dependencies": {
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
